# Figma_Service

./: .env.example  .gitignore  CLAUDE.md  README.md  host_io.py  override_handlers.py  plan_colors.py  plan_handlers.py  primitive_types.py  protocol.py  pyproject.toml  read_handlers.py  run.py  suggest_primitives.py  sync_handlers.py  transport.py  validate_primitives.py  validate_semantic_primitives.py  wrapper.js
docs/: manual_test_color_discovery.md
docs/tokens/: architecture.md  semantic-seed-guide.md  (+2 more)
scripts/: pipeline_primitive_colors.sh
tests/: conftest.py  test_cleanup_candidates.py  test_deduplicate_primitives.py  test_generate_text_styles.py  test_host_io.py  test_override_handlers.py  test_plan_handlers.py  test_plan_suggest_primitive_seeds.py  test_plan_validate_primitives.py  test_plan_validate_semantic_primitives_cmd.py  test_primitive_types.py  test_protocol.py  test_read_color_usage_detail.py  test_read_typography_audit.py  test_reassembly.py  test_semantic_tokens.py  test_suggest_primitives.py  test_suggest_semantic_tokens_cmd.py  test_sync_output_modes.py  test_sync_primitive_tokens.py  test_sync_semantic_tokens.py  test_validate_primitives.py  test_validate_semantic_primitives.py  test_validate_text_styles.py  test_wrapper_load.py
tokens/: font-family.seed.json  font-size.seed.json  font-weight.seed.json  letter-spacing.seed.json  line-height.seed.json  opacity.seed.json  primitives-semantic.seed.json  radius.seed.json  semantics.normalized.json  semantics.seed.json  spacing.seed.json  stroke-width.seed.json  text-styles.seed.deprecated.json
(+27 files in other folders)
