[project]
name = "figma-service"
version = "0.1.0"
description = "Playwright + Scripter bridge for automating Figma Plugin API scripts."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.47",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
figma-service = "run:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["run.py"]
